--- a/src/components/ui-components/card/_index.scss
+++ b/src/components/ui-components/card/_index.scss
@@ -7,7 +7,6 @@ $card-padding: 0.4em;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, .12);
 
     border-radius: $card-radius;
-    padding: $card-padding;
     @include theme.property(background-color, bg-container);
     @include theme.property(color, fg-on-container);
 }
